opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Stefano Zacchiroli"
  "David Sheets"
  "Thomas Gazagnaire"
  "David Scott"
  "Rudi Grinberg"
  "Andy Ray"
]
synopsis: "CoHTTP implementation for the Async concurrency library"
description: """
An implementation of an HTTP client and server using the Async
concurrency library. See the `Cohttp_async` module for information
on how to use this.  The package also installs `cohttp-curl-async`
and a `cohttp-server-async` binaries for quick uses of a HTTP(S)
client and server respectively.
"""
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-cohttp"
doc: "https://mirage.github.io/ocaml-cohttp/"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
depends: [
  "ocaml" {>= "4.04.1"}
  "dune" {>= "1.1.0"}
  "async_kernel" {>= "v0.14.0"}
  "async_unix" {>= "v0.14.0"}
  "async" {>= "v0.14.0"}
  "base" {>= "v0.11.0"}
  "core" {with-test}
  "cohttp" {=version}
  "conduit-async" {>="1.2.0"}
  "conduit-async-ssl"
  "magic-mime"
  "logs"
  "fmt" {>= "0.8.2"}
  "sexplib0"
  "stdlib-shims"
  "ppx_sexp_conv" {>= "v0.13.0"}
  "ounit" {with-test}
  "uri" {>= "2.0.0"}
  "uri-sexp"
  "ipaddr"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-cohttp.git"
pin-depends: [
  [ "conduit.dev" "git+https://github.com/mirage/ocaml-conduit.git#4b9e8b0f8e96459c8e27ca27ed7416b8d1b5ba23" ]
  [ "conduit-tls.dev" "git+https://github.com/mirage/ocaml-conduit.git#4b9e8b0f8e96459c8e27ca27ed7416b8d1b5ba23" ]
  [ "conduit-async-ssl.dev" "git+https://github.com/mirage/ocaml-conduit.git#4b9e8b0f8e96459c8e27ca27ed7416b8d1b5ba23" ]
  [ "conduit-async.dev" "git+https://github.com/mirage/ocaml-conduit.git#4b9e8b0f8e96459c8e27ca27ed7416b8d1b5ba23" ]
]
