opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Stefano Zacchiroli"
  "David Sheets"
  "Thomas Gazagnaire"
  "David Scott"
  "Rudi Grinberg"
  "Andy Ray"
]
homepage: "https://github.com/mirage/ocaml-cohttp"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
dev-repo: "https://github.com/mirage/ocaml-cohttp.git"
doc: "https://mirage.github.io/ocaml-cohttp/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build & >= "1.1.0"}
  "conduit-lwt-unix" {>="1.0.3"}
  "cmdliner"
  "magic-mime"
  "logs"
  "fmt" {>="0.8.2"}
  "cohttp-lwt"
  "lwt" {>="3.0.0"}
  "base-unix"
  "ounit" {test}
]
conflicts: [
  "lwt" {< "2.5.0"}
]
available: [ocaml-version >= "4.04.1"]
