opam-version: "2.0"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Stefano Zacchiroli"
  "David Sheets"
  "Thomas Gazagnaire"
  "David Scott"
  "Rudi Grinberg"
  "Andy Ray"
]
synopsis: "CoHTTP implementation for Unix and Windows using Lwt"
description: """
An implementation of an HTTP client and server using the Lwt
concurrency library. See the `Cohttp_lwt_unix` module for information
on how to use this.  The package also installs `cohttp-curl-lwt`
and a `cohttp-server-lwt` binaries for quick uses of a HTTP(S)
client and server respectively.

Although the name implies that this only works under Unix, it
should also be fine under Windows too."""
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
homepage: "https://github.com/mirage/ocaml-cohttp"
doc: "https://mirage.github.io/ocaml-cohttp/"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0"}
  "conduit-lwt" {>= "4.0.0"}
  "conduit-lwt-unix" {>= "4.0.0"}
  "cmdliner"
  "magic-mime"
  "logs"
  "fmt" {>= "0.8.2"}
  "cohttp-lwt" {= version}
  "ppx_sexp_conv" {>= "v0.13.0"}
  "lwt" {>= "3.0.0"}
  "base-unix"
  "ounit" {with-test}
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-cohttp.git"
pin-depends: [
  [ "conduit.4.0.0" "git+https://github.com/mirage/ocaml-conduit.git#ef052fa164144d666c7785ab902412e156a03d22" ]
  [ "conduit-lwt.4.0.0" "git+https://github.com/mirage/ocaml-conduit.git#ef052fa164144d666c7785ab902412e156a03d22" ]
  [ "conduit-lwt-unix.4.0.0" "git+https://github.com/mirage/ocaml-conduit.git#ef052fa164144d666c7785ab902412e156a03d22" ]
  [ "tls.0.13.0" "git+https://github.com/mirleft/ocaml-tls.git#f9dd61f556d3f2790aa9eedcf2b6b3c8c99cb338" ]
  [ "tls-mirage.0.13.0" "git+https://github.com/mirleft/ocaml-tls.git#f9dd61f556d3f2790aa9eedcf2b6b3c8c99cb338" ]
]
