opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Stefano Zacchiroli"
  "David Sheets"
  "Thomas Gazagnaire"
  "David Scott"
  "Rudi Grinberg"
  "Andy Ray"
]
homepage: "https://github.com/mirage/ocaml-cohttp"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
dev-repo: "https://github.com/mirage/ocaml-cohttp.git"
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build & >= "1.0+beta10"}
  "cohttp"
  "lwt"
  "sexplib"
  "ppx_sexp_conv" {build & >="v0.9.0"}
]
conflicts: [
  "lwt" {< "2.5.0"}
]
available: [ocaml-version >= "4.03.0"]
