opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Stefano Zacchiroli"
  "David Sheets"
  "Thomas Gazagnaire"
  "David Scott"
  "Rudi Grinberg"
  "Andy Ray"
]
homepage: "https://github.com/mirage/ocaml-cohttp"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
dev-repo: "https://github.com/mirage/ocaml-cohttp.git"
doc: "https://mirage.github.io/ocaml-cohttp/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build & >= "1.1.0"}
  "cohttp" {>= "1.0.0"}
  "lwt"
  "sexplib0"
  "ppx_sexp_conv" {>= "v0.9.0"}
]
conflicts: [
  "lwt" {< "2.5.0"}
]
available: [ocaml-version >= "4.04.1"]
