opam-version: "1.2"
maintainer: "anil@recoil.org"
authors: [
  "Anil Madhavapeddy"
  "Thomas Gazagnaire"
]
homepage: "https://github.com/mirage/ocaml-cohttp"
bug-reports: "https://github.com/mirage/ocaml-cohttp/issues"
license: "ISC"
tags: ["org:mirage" "org:xapi-project"]
dev-repo: "https://github.com/mirage/ocaml-cohttp.git"
doc: "https://mirage.github.io/ocaml-cohttp/"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "dune" {build & >= "1.1.0"}
  "result"
  "mirage-flow-lwt" {>= "1.2.0"}
  "mirage-channel-lwt" {>= "3.0.0"}
  "conduit" {>= "0.99"}
  "mirage-conduit" {>= "3.0.0"}
  "lwt" {>= "2.4.3"}
  "cohttp"
  "cohttp-lwt"
  "astring"
  "magic-mime"
]
available: [ocaml-version >= "4.04.1"]
