(executable
 (name bench)
 (modules bench)
 (libraries http core core_bench lwt_eio eio_main))

(executable
 (name lwt_unix_server)
 (modules lwt_unix_server)
 (libraries cohttp-lwt-unix logs.fmt fmt.tty lwt_eio eio_main))

(executable
 (name async_server)
 (modules async_server)
 (libraries cohttp-async logs.fmt fmt.tty lwt_eio eio_main))

(rule
 (alias bench)
 (package cohttp-bench)
 (enabled_if %{arch_sixtyfour})
 (action
  (run ./bench.exe time cycles)))

(rule
 (alias latency)
 (deps lwt_unix_server.exe async_server.exe)
 (package cohttp-bench)
 (action
  (run ./latency.sh)))
