(test
 (name test)
 (modules test)
 (libraries alcotest cohttp-eio eio eio.mock eio_main logs.fmt)
 (package cohttp-eio)
 (preprocess
  (pps ppx_here)))

(test
 (name test_forward_proxy)
 (modules test_forward_proxy)
 (libraries alcotest cohttp-eio eio eio.mock eio_main logs.fmt)
 (package cohttp-eio))
