(library
 (name cohttp_lwt_tests)
 (libraries
  cohttp-lwt
  lwt
  lwt.unix
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  ppx_expect.common
  base
  ppx_inline_test.config)
 (inline_tests)
 (preprocess (pps ppx_expect)))
