(rule
 (with-stdout-to
  conf.ml
  (echo "let version = \"%{version:cohttp}\"")))

(library
 (name cohttp)
 (public_name cohttp)
 (synopsis "Co-operative Client/Server HTTP library.")
 (preprocess
  (pps ppx_sexp_conv))
 (libraries
  (re_export http)
  re
  stringext
  uri
  uri-sexp
  sexplib0
  bytes
  base64))

(ocamllex accept_lexer)

(ocamlyacc accept_parser)
