(executable
 (name test_header)
 (modules test_header)
 (forbidden_libraries base)
 (libraries http alcotest sexplib0))

(rule
 (alias runtest)
 (package http)
 (action
  (run ./test_header.exe)))

(test
 (name test_parser)
 (modules test_parser)
 (package http)
 (preprocess
  (pps
   base_quickcheck.ppx_quickcheck
   ppx_assert
   ppx_sexp_conv
   ppx_compare
   ppx_here))
 (libraries http core base_quickcheck alcotest))
